--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/strongly-recommended",
       "eslint:recommended"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "rules": {
+      "vue/no-v-html": "error"
     }
   },
   "postcss": {
